--- a/test_tensorserving.ipynb
+++ b/test_tensorserving.ipynb
@@ -17,6 +17,7 @@
     "from tensorflow_serving.apis import prediction_service_pb2_grpc\n",
     "from PIL import Image\n",
     "import numpy as np\n",
+    "np.set_printoptions(suppress=True)\n",
     "import cv2"
    ]
   },
@@ -117,11 +118,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<_Rendezvous of RPC that terminated with:\n",
-      "\tstatus = StatusCode.INVALID_ARGUMENT\n",
-      "\tdetails = \"Expects arg[0] to be float but int32 is provided\"\n",
-      "\tdebug_error_string = \"{\"created\":\"@1541644101.514719567\",\"description\":\"Error received from peer\",\"file\":\"src/core/lib/surface/call.cc\",\"file_line\":1017,\"grpc_message\":\"Expects arg[0] to be float but int32 is provided\",\"grpc_status\":3}\"\n",
-      ">\n"
+      "[[143.97021484  41.10689545 187.8334198  112.54310608]\n",
+      " [ -0.0293625   58.08413696 184.96412659 154.04672241]\n",
+      " [  0.64791512  18.9538784  184.80123901 109.82003021]] [0.6036756634712219, 0.48700934648513794, 0.3633933663368225] [0, 0, 0]\n"
      ]
     }
    ],
@@ -129,13 +128,15 @@
     "def letterbox_image(image, size):\n",
     "    '''resize image with unchanged aspect ratio using padding'''\n",
     "    ih, iw, _ = image.shape\n",
+    "\n",
     "    w, h = size\n",
-    "    scale = min(w / iw, h / ih)\n",
+    "    scale = min(w / float(iw), h / float(ih))\n",
+    "    \n",
     "    nw = int(iw * scale)\n",
     "    nh = int(ih * scale)\n",
     "\n",
     "    image = cv2.resize(image, (nw, nh), interpolation=cv2.INTER_CUBIC)\n",
-    "\n",
+    "    \n",
     "    new_image = np.ones((416, 416, 3), dtype=np.int8) * 128\n",
     "    new_image[(h - nh) // 2:(h - nh) // 2 + nh, (w - nw) // 2:(w - nw) // 2 + nw, :] = image\n",
     "\n",
@@ -144,11 +145,20 @@
     "\n",
     "def pretreat(inputs):\n",
     "    boxed_image = letterbox_image(inputs, tuple(reversed((416, 416))))\n",
+    "    \n",
     "    image_data = np.array(boxed_image, dtype='float32')\n",
     "    image_data /= 255.\n",
     "    image_data = np.expand_dims(image_data, 0)  # Add batch dimension.\n",
     "\n",
     "    return image_data\n",
+    "\n",
+    "    \n",
+    "file_path = '/home/sw/Work/tf/yaochang/test2/0000.jpg'\n",
+    "\n",
+    "img = Image.open(file_path)\n",
+    "img = np.array(img)\n",
+    "\n",
+    "image_data = pretreat(img)\n",
     "\n",
     "channel = grpc.insecure_channel('127.0.0.1:8500')\n",
     "stub = prediction_service_pb2_grpc.PredictionServiceStub(channel)\n",
@@ -157,13 +167,7 @@
     "request.model_spec.name = 'yolov3'\n",
     "request.model_spec.signature_name = 'detect_image'\n",
     "    \n",
-    "file_path = '/home/sw/Work/tf/yaochang/test2/0000.jpg'\n",
-    "\n",
-    "img = Image.open(file_path)\n",
-    "img = np.array(img)\n",
-    "image = pretreat(img)\n",
-    "    \n",
-    "request.inputs['x'].CopyFrom(tf.contrib.util.make_tensor_proto(image))\n",
+    "request.inputs['x'].CopyFrom(tf.contrib.util.make_tensor_proto(image_data))\n",
     "request.inputs['shape'].CopyFrom(tf.contrib.util.make_tensor_proto([float(img.shape[0]), float(img.shape[1])]))\n",
     "    \n",
     "result_future = stub.Predict.future(request, 10)  # 5 seconds\n",
@@ -171,19 +175,42 @@
     "if exception:\n",
     "    print(exception)\n",
     "else:\n",
-    "    response = numpy.array([\n",
-    "    result_future.result().outputs['boxes'].float_val,\n",
-    "    result_future.result().outputs['scores'].float_val,\n",
-    "    result_future.result().outputs['classes'].int_val])\n",
-    "    print response\n"
+    "    out_boxes = numpy.array(result_future.result().outputs['boxes'].float_val).reshape((-1,4))\n",
+    "    out_scores = result_future.result().outputs['scores'].float_val\n",
+    "    out_classes = result_future.result().outputs['classes'].int_val\n",
+    "    print out_boxes, out_scores, out_classes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Detection model, /home/sw/Work/tf/yaochang/weights/trained_weights_final.h5 model, 9 anchors, and 1 classes load success!.\n",
+      "<type 'int'> <type 'int'> <type 'int'> <type 'int'>\n",
+      "2.23655913978\n",
+      "[[143.97023     41.10689    187.83342    112.54312   ]\n",
+      " [ -0.0293625   58.08414    184.96413    154.04672   ]\n",
+      " [  0.64793175  18.953882   184.80122    109.820015  ]] [0.60367596 0.48700902 0.3633928 ] [0 0 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from Yolo3 import YOLO\n",
+    "\n",
+    "file_path = '/home/sw/Work/tf/yaochang/test2/0000.jpg'\n",
+    "\n",
+    "img = Image.open(file_path)\n",
+    "image = np.array(img)\n",
+    "\n",
+    "person_detect_model = YOLO()\n",
+    "out_boxes, out_scores, out_classes = person_detect_model.get_box(image)\n",
+    "print out_boxes, out_scores, out_classes"
+   ]
   }
  ],
  "metadata": {
