--- a/test_tensorserving.ipynb
+++ b/test_tensorserving.ipynb
@@ -23,15 +23,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[38.65402985 39.78093719 41.80890274]\n",
-      " [ 1.49255705  4.94189024 -3.93510246]]\n"
+      "[[ 7.44987774 -3.7825408  -2.32236958]\n",
+      " [ 7.80152798 -3.59011436 -2.53183818]]\n"
      ]
     }
    ],
@@ -80,14 +80,14 @@
     "    request.model_spec.name = '3daction'\n",
     "    request.model_spec.signature_name = 'predict_image'\n",
     "    \n",
-    "    dir_path = '/home/sw/Work/tf/yaochang/tests/'\n",
+    "    dir_path = '/home/sw/data/yaochang/0/1_1537340362_89fe8072-bbd9-11e8-b3b6-6045cb7fb916/'\n",
     "    inputs = []\n",
     "    for i in range(16):\n",
     "        file_path = dir_path + '{:0>4}'.format(i) + '.jpg'\n",
     "        img = Image.open(file_path)\n",
     "        inputs.append(np.array(img))\n",
     "        \n",
-    "    dir_path = '/home/sw/Work/tf/yaochang/test2/'\n",
+    "    dir_path = '/home/sw/data/yaochang/0/1_1537340445_bb80da5a-bbd9-11e8-b3b6-6045cb7fb916/'\n",
     "    inputs2 = []\n",
     "    for i in range(16):\n",
     "        file_path = dir_path + '{:0>4}'.format(i) + '.jpg'\n",
@@ -111,16 +111,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[143.97021484  41.10689545 187.8334198  112.54310608]\n",
-      " [ -0.0293625   58.08413696 184.96412659 154.04672241]\n",
-      " [  0.64791512  18.9538784  184.80123901 109.82003021]] [0.6036756634712219, 0.48700934648513794, 0.3633933663368225] [0, 0, 0]\n"
+      "<type 'int'> <type 'int'> <type 'int'> <type 'int'>\n",
+      "1.74058577406\n",
+      "[[157.66688538   1.95421338 234.63291931  67.25761414]\n",
+      " [  1.8492595  175.17196655 213.08200073 242.93869019]\n",
+      " [ 23.96910286  60.15988541 248.75239563 181.92947388]] [0.9731842279434204, 0.5309525728225708, 0.3046540319919586] [0, 0, 0]\n"
      ]
     }
    ],
@@ -128,9 +130,10 @@
     "def letterbox_image(image, size):\n",
     "    '''resize image with unchanged aspect ratio using padding'''\n",
     "    ih, iw, _ = image.shape\n",
-    "\n",
     "    w, h = size\n",
+    "    print type(ih),type(iw),type(w),type(h)\n",
     "    scale = min(w / float(iw), h / float(ih))\n",
+    "    print scale\n",
     "    \n",
     "    nw = int(iw * scale)\n",
     "    nh = int(ih * scale)\n",
@@ -153,7 +156,7 @@
     "    return image_data\n",
     "\n",
     "    \n",
-    "file_path = '/home/sw/Work/tf/yaochang/test2/0000.jpg'\n",
+    "file_path = '/home/sw/data/yaochang/0/1_1537340445_bb80da5a-bbd9-11e8-b3b6-6045cb7fb916/0000.jpg'\n",
     "\n",
     "img = Image.open(file_path)\n",
     "img = np.array(img)\n",
@@ -183,33 +186,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Detection model, /home/sw/Work/tf/yaochang/weights/trained_weights_final.h5 model, 9 anchors, and 1 classes load success!.\n",
-      "<type 'int'> <type 'int'> <type 'int'> <type 'int'>\n",
-      "2.23655913978\n",
-      "[[143.97023     41.10689    187.83342    112.54312   ]\n",
-      " [ -0.0293625   58.08414    184.96413    154.04672   ]\n",
-      " [  0.64793175  18.953882   184.80122    109.820015  ]] [0.60367596 0.48700902 0.3633928 ] [0 0 0]\n"
+      "[0.99997985 0.00002018]\n"
      ]
     }
    ],
    "source": [
-    "from Yolo3 import YOLO\n",
-    "\n",
-    "file_path = '/home/sw/Work/tf/yaochang/test2/0000.jpg'\n",
-    "\n",
+    "file_path = '/home/sw/data/yaochang/0/1_1537340445_bb80da5a-bbd9-11e8-b3b6-6045cb7fb916/0000.jpg'\n",
     "img = Image.open(file_path)\n",
-    "image = np.array(img)\n",
+    "image_data = np.array(img.resize((224,224)), dtype = np.float32)/127.5 - 1.\n",
+    "image_data = np.expand_dims(image_data, 0)\n",
     "\n",
-    "person_detect_model = YOLO()\n",
-    "out_boxes, out_scores, out_classes = person_detect_model.get_box(image)\n",
-    "print out_boxes, out_scores, out_classes"
+    "channel = grpc.insecure_channel('127.0.0.1:8500')\n",
+    "stub = prediction_service_pb2_grpc.PredictionServiceStub(channel)\n",
+    "\n",
+    "request = predict_pb2.PredictRequest()\n",
+    "request.model_spec.name = 'mobilenet'\n",
+    "request.model_spec.signature_name = 'classify_image'\n",
+    "    \n",
+    "request.inputs['x'].CopyFrom(tf.contrib.util.make_tensor_proto(image_data))\n",
+    "    \n",
+    "result_future = stub.Predict.future(request, 10)  # 5 seconds\n",
+    "exception = result_future.exception()\n",
+    "if exception:\n",
+    "    print(exception)\n",
+    "else:\n",
+    "    res = numpy.array(result_future.result().outputs['scores'].float_val)\n",
+    "    print res"
    ]
   }
  ],
