transport images bytes instead of image floats version

--- a/MobileNet.ipynb
+++ b/MobileNet.ipynb
@@ -97,52 +97,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "Epoch 00001: LearningRateScheduler reducing learning rate to 1e-04.\n",
       "Epoch 1/10\n",
-      "436/446 [============================>.] - ETA: 1s - loss: 0.0347 - acc: 0.9913shuffle\n",
-      "445/446 [============================>.] - ETA: 0s - loss: 0.0344 - acc: 0.9915\n",
+      "755/765 [============================>.] - ETA: 1s - loss: 0.3149 - acc: 0.8791shuffle\n",
+      "764/765 [============================>.] - ETA: 0s - loss: 0.3139 - acc: 0.8796\n",
       "Epoch 00001: saving model to mobilenet.h5\n",
-      "446/446 [==============================] - 87s 196ms/step - loss: 0.0343 - acc: 0.9915\n",
+      "765/765 [==============================] - 143s 187ms/step - loss: 0.3139 - acc: 0.8796\n",
+      "\n",
+      "Epoch 00002: LearningRateScheduler reducing learning rate to 6.9999995e-05.\n",
       "Epoch 2/10\n",
-      "437/446 [============================>.] - ETA: 1s - loss: 0.0242 - acc: 0.9944shuffle\n",
-      "445/446 [============================>.] - ETA: 0s - loss: 0.0243 - acc: 0.9944\n",
+      "756/765 [============================>.] - ETA: 1s - loss: 0.1650 - acc: 0.9439shuffle\n",
+      "764/765 [============================>.] - ETA: 0s - loss: 0.1646 - acc: 0.9441\n",
       "Epoch 00002: saving model to mobilenet.h5\n",
-      "446/446 [==============================] - 79s 177ms/step - loss: 0.0244 - acc: 0.9943\n",
+      "765/765 [==============================] - 136s 178ms/step - loss: 0.1645 - acc: 0.9442\n",
+      "\n",
+      "Epoch 00003: LearningRateScheduler reducing learning rate to 4.8999995e-05.\n",
       "Epoch 3/10\n",
-      "438/446 [============================>.] - ETA: 1s - loss: 0.0253 - acc: 0.9939shuffle\n",
-      "445/446 [============================>.] - ETA: 0s - loss: 0.0253 - acc: 0.9939\n",
+      "756/765 [============================>.] - ETA: 1s - loss: 0.1094 - acc: 0.9656shuffle\n",
+      "764/765 [============================>.] - ETA: 0s - loss: 0.1093 - acc: 0.9658\n",
       "Epoch 00003: saving model to mobilenet.h5\n",
-      "446/446 [==============================] - 80s 178ms/step - loss: 0.0253 - acc: 0.9939\n",
+      "765/765 [==============================] - 137s 179ms/step - loss: 0.1092 - acc: 0.9659\n",
+      "\n",
+      "Epoch 00004: LearningRateScheduler reducing learning rate to 3.4299996e-05.\n",
       "Epoch 4/10\n",
-      " 48/446 [==>...........................] - ETA: 1:11 - loss: 0.0226 - acc: 0.9954"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-176db85a40e3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0msavemodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcallbacks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mModelCheckpoint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'mobilenet.h5'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_generator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgenerator\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_samples\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcallbacks\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0msavemodel\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python2.7/dist-packages/tensorflow/python/keras/engine/training.pyc\u001b[0m in \u001b[0;36mfit_generator\u001b[0;34m(self, generator, steps_per_epoch, epochs, verbose, callbacks, validation_data, validation_steps, class_weight, max_queue_size, workers, use_multiprocessing, shuffle, initial_epoch)\u001b[0m\n\u001b[1;32m   2175\u001b[0m         \u001b[0muse_multiprocessing\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0muse_multiprocessing\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2176\u001b[0m         \u001b[0mshuffle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mshuffle\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2177\u001b[0;31m         initial_epoch=initial_epoch)\n\u001b[0m\u001b[1;32m   2178\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2179\u001b[0m   def evaluate_generator(self,\n",
-      "\u001b[0;32m/usr/local/lib/python2.7/dist-packages/tensorflow/python/keras/engine/training_generator.pyc\u001b[0m in \u001b[0;36mfit_generator\u001b[0;34m(model, generator, steps_per_epoch, epochs, verbose, callbacks, validation_data, validation_steps, class_weight, max_queue_size, workers, use_multiprocessing, shuffle, initial_epoch)\u001b[0m\n\u001b[1;32m    174\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    175\u001b[0m         outs = model.train_on_batch(\n\u001b[0;32m--> 176\u001b[0;31m             x, y, sample_weight=sample_weight, class_weight=class_weight)\n\u001b[0m\u001b[1;32m    177\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    178\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mouts\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python2.7/dist-packages/tensorflow/python/keras/engine/training.pyc\u001b[0m in \u001b[0;36mtrain_on_batch\u001b[0;34m(self, x, y, sample_weight, class_weight)\u001b[0m\n\u001b[1;32m   1938\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1939\u001b[0m       \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_make_train_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1940\u001b[0;31m       \u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mins\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1941\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1942\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python2.7/dist-packages/tensorflow/python/keras/backend.pyc\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, inputs)\u001b[0m\n\u001b[1;32m   2984\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2985\u001b[0m     fetched = self._callable_fn(*array_vals,\n\u001b[0;32m-> 2986\u001b[0;31m                                 run_metadata=self.run_metadata)\n\u001b[0m\u001b[1;32m   2987\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_call_fetch_callbacks\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfetched\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_fetches\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2988\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mfetched\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python2.7/dist-packages/tensorflow/python/client/session.pyc\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1437\u001b[0m           ret = tf_session.TF_SessionRunCallable(\n\u001b[1;32m   1438\u001b[0m               \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_session\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_handle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstatus\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1439\u001b[0;31m               run_metadata_ptr)\n\u001b[0m\u001b[1;32m   1440\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1441\u001b[0m           \u001b[0mproto_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "757/765 [============================>.] - ETA: 1s - loss: 0.0736 - acc: 0.9789shuffle\n",
+      "764/765 [============================>.] - ETA: 0s - loss: 0.0739 - acc: 0.9787\n",
+      "Epoch 00004: saving model to mobilenet.h5\n",
+      "765/765 [==============================] - 136s 177ms/step - loss: 0.0739 - acc: 0.9787\n",
+      "\n",
+      "Epoch 00005: LearningRateScheduler reducing learning rate to 2.4009996e-05.\n",
+      "Epoch 5/10\n",
+      "757/765 [============================>.] - ETA: 1s - loss: 0.0558 - acc: 0.9851shuffle\n",
+      "764/765 [============================>.] - ETA: 0s - loss: 0.0557 - acc: 0.9852\n",
+      "Epoch 00005: saving model to mobilenet.h5\n",
+      "765/765 [==============================] - 136s 178ms/step - loss: 0.0556 - acc: 0.9853\n",
+      "\n",
+      "Epoch 00006: LearningRateScheduler reducing learning rate to 1.6806996e-05.\n",
+      "Epoch 6/10\n",
+      "758/765 [============================>.] - ETA: 1s - loss: 0.0437 - acc: 0.9897shuffle\n",
+      "764/765 [============================>.] - ETA: 0s - loss: 0.0438 - acc: 0.9897\n",
+      "Epoch 00006: saving model to mobilenet.h5\n",
+      "765/765 [==============================] - 136s 178ms/step - loss: 0.0438 - acc: 0.9897\n",
+      "\n",
+      "Epoch 00007: LearningRateScheduler reducing learning rate to 1.1764898e-05.\n",
+      "Epoch 7/10\n",
+      "758/765 [============================>.] - ETA: 1s - loss: 0.0366 - acc: 0.9928shuffle\n",
+      "764/765 [============================>.] - ETA: 0s - loss: 0.0364 - acc: 0.9928\n",
+      "Epoch 00007: saving model to mobilenet.h5\n",
+      "765/765 [==============================] - 136s 178ms/step - loss: 0.0364 - acc: 0.9929\n",
+      "\n",
+      "Epoch 00008: LearningRateScheduler reducing learning rate to 8.235428e-06.\n",
+      "Epoch 8/10\n",
+      "759/765 [============================>.] - ETA: 1s - loss: 0.0335 - acc: 0.9932shuffle\n",
+      "764/765 [============================>.] - ETA: 0s - loss: 0.0335 - acc: 0.9932\n",
+      "Epoch 00008: saving model to mobilenet.h5\n",
+      "765/765 [==============================] - 136s 178ms/step - loss: 0.0335 - acc: 0.9932\n",
+      "\n",
+      "Epoch 00009: LearningRateScheduler reducing learning rate to 5.7648e-06.\n",
+      "Epoch 9/10\n",
+      "759/765 [============================>.] - ETA: 1s - loss: 0.0304 - acc: 0.9940shuffle\n",
+      "764/765 [============================>.] - ETA: 0s - loss: 0.0303 - acc: 0.9941\n",
+      "Epoch 00009: saving model to mobilenet.h5\n",
+      "765/765 [==============================] - 136s 178ms/step - loss: 0.0303 - acc: 0.9941\n",
+      "\n",
+      "Epoch 00010: LearningRateScheduler reducing learning rate to 4.03536e-06.\n",
+      "Epoch 10/10\n",
+      "701/765 [==========================>...] - ETA: 11s - loss: 0.0276 - acc: 0.9951"
      ]
     }
    ],
    "source": [
     "batch_size = 32\n",
-    "num_samples = 14299\n",
+    "num_samples = 24496\n",
     "\n",
     "K.set_learning_phase(1)\n",
     "base_model = MobileNetV2(input_shape=(224, 224, 3), alpha=1.4, include_top=False)\n",
@@ -161,11 +195,19 @@
     "adam = keras.optimizers.Adam(lr=0.0001)\n",
     "model.compile(optimizer=adam, loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "\n",
-    "model.load_weights('./tt_mobilenet.h5', by_name=True);\n",
+    "model.load_weights('./dense_trained_mobilenet.h5', by_name=True);\n",
     "generator = mk_generator(batchsize=batch_size, file_path = '/home/sw/data/yc/yaochang/2dtrain.txt')\n",
     "\n",
     "savemodel = keras.callbacks.ModelCheckpoint('mobilenet.h5', verbose=1)\n",
-    "model.fit_generator(generator, num_samples/batch_size, epochs=10, callbacks=[savemodel])\n",
+    "\n",
+    "def lrs(epoch):\n",
+    "    if epoch >= 1:\n",
+    "        K.set_value(model.optimizer.lr, K.get_value(model.optimizer.lr)*0.7)     \n",
+    "    return K.get_value(model.optimizer.lr)\n",
+    "\n",
+    "change_lr = keras.callbacks.LearningRateScheduler(lrs, verbose=1)\n",
+    "\n",
+    "model.fit_generator(generator, num_samples/batch_size, epochs=10, callbacks=[savemodel, change_lr])\n",
     "\n"
    ]
   },
@@ -180,12 +222,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/home/sw/data/1101-tag/1/1_1541052336_26f01cea-dd9c-11e8-ad10-6045cb7fb916/0004.jpg 1\\n']\n",
-      "0.0\n",
-      "['/home/sw/data/1101-tag/1/1_1541052336_26f01cea-dd9c-11e8-ad10-6045cb7fb916/0002.jpg 1\\n']\n",
-      "0.0\n",
       "[]\n",
       "1.0\n",
+      "[]\n",
+      "1.0\n",
+      "['/home/sw/data/1101-tag/1/1_1541053040_ca4730e4-dd9d-11e8-ad10-6045cb7fb916/0015.jpg 1\\n']\n",
+      "0.0\n",
       "[]\n",
       "1.0\n",
       "[]\n",
@@ -208,44 +250,44 @@
       "0.0\n",
       "['/home/sw/data/1101-tag/1/1_1541053661_3c90d0dc-dd9f-11e8-ad10-6045cb7fb916/0009.jpg 1\\n']\n",
       "0.0\n",
-      "['/home/sw/data/1101-tag/1/1_1541053821_9bbe7899-dd9f-11e8-ad10-6045cb7fb916/0000.jpg 1\\n']\n",
-      "0.0\n",
+      "[]\n",
+      "1.0\n",
       "['/home/sw/data/1101-tag/1/1_1541053821_9bbe7899-dd9f-11e8-ad10-6045cb7fb916/0010.jpg 1\\n']\n",
       "0.0\n",
       "['/home/sw/data/1101-tag/1/1_1541054074_32a92385-dda0-11e8-ad10-6045cb7fb916/0015.jpg 1\\n']\n",
       "0.0\n",
-      "['/home/sw/data/1101-tag/1/1_1541054074_32a92385-dda0-11e8-ad10-6045cb7fb916/0003.jpg 1\\n']\n",
+      "[]\n",
+      "1.0\n",
+      "[]\n",
+      "1.0\n",
+      "[]\n",
+      "1.0\n",
+      "['/home/sw/data/1101-tag/1/1_1541054909_2475ffb0-dda2-11e8-ad10-6045cb7fb916/0006.jpg 1\\n']\n",
       "0.0\n",
-      "['/home/sw/data/1101-tag/1/1_1541054864_0955be1e-dda2-11e8-ad10-6045cb7fb916/0006.jpg 1\\n']\n",
+      "[]\n",
+      "1.0\n",
+      "['/home/sw/data/1101-tag/1/1_1541056307_66303490-dda5-11e8-ad10-6045cb7fb916/0013.jpg 1\\n']\n",
       "0.0\n",
-      "['/home/sw/data/1101-tag/1/1_1541054864_0955be1e-dda2-11e8-ad10-6045cb7fb916/0015.jpg 1\\n']\n",
+      "['/home/sw/data/1101-tag/1/1_1541056307_66303490-dda5-11e8-ad10-6045cb7fb916/0012.jpg 1\\n']\n",
       "0.0\n",
-      "[]\n",
-      "1.0\n",
-      "[]\n",
-      "1.0\n",
-      "[]\n",
-      "1.0\n",
-      "[]\n",
-      "1.0\n",
       "['/home/sw/data/1101-tag/1/1_1541057731_b6ca636e-dda8-11e8-ad10-6045cb7fb916/0005.jpg 1\\n']\n",
       "0.0\n",
       "[]\n",
       "1.0\n",
-      "['/home/sw/data/1101-tag/1/2_1541052727_0f958a5c-dd9d-11e8-ad10-6045cb7fb916/0001.jpg 1\\n']\n",
-      "0.0\n",
-      "['/home/sw/data/1101-tag/1/2_1541052727_0f958a5c-dd9d-11e8-ad10-6045cb7fb916/0005.jpg 1\\n']\n",
-      "0.0\n",
-      "['/home/sw/data/1101-tag/1/2_1541053827_9f472f78-dd9f-11e8-ad10-6045cb7fb916/0004.jpg 1\\n']\n",
-      "0.0\n",
       "[]\n",
       "1.0\n",
+      "[]\n",
+      "1.0\n",
+      "['/home/sw/data/1101-tag/1/2_1541053827_9f472f78-dd9f-11e8-ad10-6045cb7fb916/0004.jpg 1\\n']\n",
+      "0.0\n",
+      "['/home/sw/data/1101-tag/1/2_1541053827_9f472f78-dd9f-11e8-ad10-6045cb7fb916/0003.jpg 1\\n']\n",
+      "0.0\n",
       "['/home/sw/data/1101-tag/1/2_1541056698_4e7e93e0-dda6-11e8-ad10-6045cb7fb916/0004.jpg 1\\n']\n",
       "0.0\n",
       "['/home/sw/data/1101-tag/1/2_1541056698_4e7e93e0-dda6-11e8-ad10-6045cb7fb916/0013.jpg 1\\n']\n",
       "0.0\n",
-      "['/home/sw/data/1101-tag/1/2_1541058832_46e2dc54-ddab-11e8-ad10-6045cb7fb916/0004.jpg 1\\n']\n",
-      "0.0\n",
+      "[]\n",
+      "1.0\n",
       "['/home/sw/data/1101-tag/1/2_1541058832_46e2dc54-ddab-11e8-ad10-6045cb7fb916/0010.jpg 1\\n']\n",
       "0.0\n"
      ]
