--- a/make_tensorserving_mobilenet.ipynb
+++ b/make_tensorserving_mobilenet.ipynb
@@ -54,6 +54,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_inputs(param):\n",
+    "    my_input = tf.map_fn(elems=param, fn=tf.image.decode_jpeg, dtype=tf.uint8)\n",
+    "    my_input = K.reshape(my_input,[-1, 224,224,3])\n",
+    "    my_input = K.cast(my_input, dtype=tf.float32)\n",
+    "    my_input = tf.divide(my_input, tf.constant(127.5))\n",
+    "    my_input = tf.subtract(my_input, tf.constant(1.0))\n",
+    "    return my_input\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -69,7 +84,11 @@
    ],
    "source": [
     "K.set_learning_phase(0)\n",
-    "base_model = MobileNetV2(input_shape=(224, 224, 3), alpha=1.4, include_top=False)\n",
+    "my_input = keras.layers.Input(shape=[],dtype=tf.string)\n",
+    "my_input = keras.layers.Lambda(get_inputs, output_shape=(224,224,3))(my_input)\n",
+    "\n",
+    "base_model = MobileNetV2(alpha=1.4, include_top=False, input_tensor=my_input, weights=None)\n",
+    "\n",
     "\n",
     "inputs = base_model.input\n",
     "x = base_model.output\n",
@@ -80,10 +99,17 @@
     "\n",
     "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "\n",
-    "model.load_weights('mobilenet.h5')\n",
+    "model.load_weights('mobilenet_best2.h5')\n",
     "\n",
-    "save_model_to_serving(model.input, model.output, '1111', './mobilenet')"
+    "save_model_to_serving(model.input, model.output, '1111', './mnet')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
