--- a/test_tensorserving.ipynb
+++ b/test_tensorserving.ipynb
@@ -23,19 +23,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 7.44987774 -3.7825408  -2.32236958]\n",
-      " [ 7.80152798 -3.59011436 -2.53183818]]\n"
+      "[[ 7.44987822 -3.78254199 -2.32236886]\n",
+      " [ 7.80152655 -3.59011364 -2.53183842]]\n"
      ]
     }
    ],
    "source": [
+    "#test p3d\n",
     "def pretreat(inputs):\n",
     "        \n",
     "    crop_size = 160\n",
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -120,13 +121,14 @@
      "text": [
       "<type 'int'> <type 'int'> <type 'int'> <type 'int'>\n",
       "1.74058577406\n",
-      "[[157.66688538   1.95421338 234.63291931  67.25761414]\n",
-      " [  1.8492595  175.17196655 213.08200073 242.93869019]\n",
-      " [ 23.96910286  60.15988541 248.75239563 181.92947388]] [0.9731842279434204, 0.5309525728225708, 0.3046540319919586] [0, 0, 0]\n"
+      "[[157.66572571   1.95671701 234.6320343   67.25691223]\n",
+      " [  1.84161687 175.1693573  213.08895874 242.94158936]\n",
+      " [ 23.96913147  60.15990067 248.75233459 181.92948914]] [0.9731753468513489, 0.5306170582771301, 0.3046584129333496] [0, 0, 0]\n"
      ]
     }
    ],
    "source": [
+    "#test yolo\n",
     "def letterbox_image(image, size):\n",
     "    '''resize image with unchanged aspect ratio using padding'''\n",
     "    ih, iw, _ = image.shape\n",
@@ -186,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -198,6 +200,7 @@
     }
    ],
    "source": [
+    "#test mobilenet\n",
     "file_path = '/home/sw/data/yaochang/0/1_1537340445_bb80da5a-bbd9-11e8-b3b6-6045cb7fb916/0000.jpg'\n",
     "img = Image.open(file_path)\n",
     "image_data = np.array(img.resize((224,224)), dtype = np.float32)/127.5 - 1.\n",
