--- a/tf-p3d-train_eval.ipynb
+++ b/tf-p3d-train_eval.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,72 @@
     "import cv2\n",
     "import copy\n",
     "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function decode_jpeg in module tensorflow.python.ops.gen_image_ops:\n",
+      "\n",
+      "decode_jpeg(contents, channels=0, ratio=1, fancy_upscaling=True, try_recover_truncated=False, acceptable_fraction=1, dct_method='', name=None)\n",
+      "    Decode a JPEG-encoded image to a uint8 tensor.\n",
+      "    \n",
+      "    The attr `channels` indicates the desired number of color channels for the\n",
+      "    decoded image.\n",
+      "    \n",
+      "    Accepted values are:\n",
+      "    \n",
+      "    *   0: Use the number of channels in the JPEG-encoded image.\n",
+      "    *   1: output a grayscale image.\n",
+      "    *   3: output an RGB image.\n",
+      "    \n",
+      "    If needed, the JPEG-encoded image is transformed to match the requested number\n",
+      "    of color channels.\n",
+      "    \n",
+      "    The attr `ratio` allows downscaling the image by an integer factor during\n",
+      "    decoding.  Allowed values are: 1, 2, 4, and 8.  This is much faster than\n",
+      "    downscaling the image later.\n",
+      "    \n",
+      "    \n",
+      "    This op also supports decoding PNGs and non-animated GIFs since the interface is\n",
+      "    the same, though it is cleaner to use `tf.image.decode_image`.\n",
+      "    \n",
+      "    Args:\n",
+      "      contents: A `Tensor` of type `string`. 0-D.  The JPEG-encoded image.\n",
+      "      channels: An optional `int`. Defaults to `0`.\n",
+      "        Number of color channels for the decoded image.\n",
+      "      ratio: An optional `int`. Defaults to `1`. Downscaling ratio.\n",
+      "      fancy_upscaling: An optional `bool`. Defaults to `True`.\n",
+      "        If true use a slower but nicer upscaling of the\n",
+      "        chroma planes (yuv420/422 only).\n",
+      "      try_recover_truncated: An optional `bool`. Defaults to `False`.\n",
+      "        If true try to recover an image from truncated input.\n",
+      "      acceptable_fraction: An optional `float`. Defaults to `1`.\n",
+      "        The minimum required fraction of lines before a truncated\n",
+      "        input is accepted.\n",
+      "      dct_method: An optional `string`. Defaults to `\"\"`.\n",
+      "        string specifying a hint about the algorithm used for\n",
+      "        decompression.  Defaults to \"\" which maps to a system-specific\n",
+      "        default.  Currently valid values are [\"INTEGER_FAST\",\n",
+      "        \"INTEGER_ACCURATE\"].  The hint may be ignored (e.g., the internal\n",
+      "        jpeg library changes to a version that does not have that specific\n",
+      "        option.)\n",
+      "      name: A name for the operation (optional).\n",
+      "    \n",
+      "    Returns:\n",
+      "      A `Tensor` of type `uint8`.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(tf.image.decode_jpeg)"
    ]
   },
   {
