--- a/make_tensorserving_3dmodel.ipynb
+++ b/make_tensorserving_3dmodel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,11 +211,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def inference_p3d(_X,BATCH_SIZE):\n",
+    "def inference_p3d(_X):\n",
     "    cnt=0\n",
     "    conv1_custom=tf.nn.conv3d(_X,get_conv_weight('firstconv1',[1,7,7,RGB_CHANNEL,64]),strides=[1,1,2,2,1],padding='SAME')\n",
     "    conv1_custom_bn=tf.layers.batch_normalization(conv1_custom,training=IS_TRAIN)\n",
@@ -253,194 +253,12 @@
     "    \n",
     "    x=tf.layers.dense(x,NUM_CLASS)\n",
     "    \n",
-    "    return x,x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compute_loss(name_scope,logit,labels):\n",
-    "    cross_entropy_mean=tf.reduce_mean(\n",
-    "                    tf.nn.sparse_softmax_cross_entropy_with_logits(labels=labels,logits=logit))\n",
-    "    tf.summary.scalar(name_scope+'_cross_entropy',\n",
-    "                     cross_entropy_mean\n",
-    "                     )\n",
-    "    weight_decay_loss=tf.get_collection('weightdecay_losses')\n",
-    "    \n",
-    "    tf.summary.scalar(name_scope+'_weight_decay_loss',tf.reduce_sum(weight_decay_loss))\n",
-    "    total_loss=cross_entropy_mean+tf.reduce_sum(weight_decay_loss)\n",
-    "    tf.summary.scalar(name_scope+'_total_loss',total_loss)\n",
-    "    return total_loss"
+    "    return x"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compute_accuracy(logit,labels):\n",
-    "    correct=tf.equal(tf.argmax(logit,1),labels)\n",
-    "    acc=tf.reduce_mean(tf.cast(correct,tf.float32))\n",
-    "    return acc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MOVING_AVERAGE_DECAY=0.9\n",
-    "MODEL_PATH='./SC_DA_P3D_RES94_23999-23999'\n",
-    "USE_PRETRAIN=False\n",
-    "MAX_STEPS=40000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "10\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Make sure IS_TRAIN==True before traininig.\n",
-    "print(IS_TRAIN)\n",
-    "print(BATCH_SIZE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def parse(example_proto): \n",
-    "    features = {\"label\": tf.FixedLenFeature([], tf.int64), \n",
-    "                \"imgs_bytes\": tf.FixedLenFeature([16], tf.string),\n",
-    "                \"shape\": tf.FixedLenFeature([2], tf.int64)} #此处解析格式保证shape和存tfrecord的shape匹配（imgs_bytes为16个jpg压缩存储字节码的list）\n",
-    "    parsed_features = tf.parse_single_example(example_proto, features) #按格式解析record\n",
-    "    encode_bytes = parsed_features[\"imgs_bytes\"] #shape为[16, ?]\n",
-    "    shape = tf.cast(parsed_features[\"shape\"], tf.int32)\n",
-    "    \n",
-    "    decode_imgs = []\n",
-    "    for i in range(16):\n",
-    "        decode_img = tf.image.decode_jpeg(encode_bytes[i], channels=3) #把压缩编码的jpg字节码解码(不需要reshape，解码会自动解析图片大小)\n",
-    "        decode_imgs.append(decode_img)\n",
-    "        \n",
-    "    decode_imgs = tf.convert_to_tensor(decode_imgs, tf.float32)\n",
-    "    \n",
-    "    width = tf.cast(shape[0], dtype=tf.float32)\n",
-    "    height = tf.cast(shape[1], dtype=tf.float32)\n",
-    "        \n",
-    "    #decode_imgs = tf.random_crop(decode_imgs, [16, tf.cast(height, dtype=tf.int32), tf.cast(width, dtype=tf.int32), 3])\n",
-    "    \n",
-    "    \n",
-    "    def crop_h():\n",
-    "        scale=tf.cast(float(160)/width*height+1.0, dtype=tf.int32)\n",
-    "        rimg = tf.image.resize_images(img, (scale, 160)) \n",
-    "        crop_h=(scale-160)/2\n",
-    "        return rimg[crop_h:crop_h+160,:,:] \n",
-    "            \n",
-    " \n",
-    "    def crop_w():\n",
-    "        scale=tf.cast(float(160)/height*width+1.0, dtype=tf.int32)\n",
-    "        rimg = tf.image.resize_images(img, (160, scale))\n",
-    "        crop_w=(scale-160)/2\n",
-    "        return rimg[:,crop_w:crop_w+160,:] \n",
-    "    \n",
-    "    ret_imgs = []\n",
-    "    for i in range(16):\n",
-    "        #此处可做预处理\n",
-    "    \n",
-    "        img = decode_imgs[i]\n",
-    "        img = tf.cond(width>height, crop_w, crop_h)\n",
-    "        #img = tf.cond(tf.equal(flip, 0), lambda:img, lambda:tf.image.flip_left_right(img))\n",
-    "        #img = tf.image.per_image_standardization(img)\n",
-    "        \n",
-    "        ret_imgs.append(img)\n",
-    "        \n",
-    "    x = tf.cast(tf.convert_to_tensor(ret_imgs), tf.float32)\n",
-    "    y = tf.cast(parsed_features[\"label\"], tf.int32)\n",
-    "    return x, y\n",
-    "\n",
-    "def my_input_fn(file_path, shuffle=True, shuffle_buffer_size=1000, batch_size=10): \n",
-    "    dataset = tf.data.TFRecordDataset(file_path).map(parse)\n",
-    "    if shuffle: \n",
-    "        dataset = dataset.shuffle(buffer_size=shuffle_buffer_size) #注意suffle_buffer_size过大会使得内存爆满，过小会使得shuffle程度过低（尤其是按label顺序的写入tfrecord)\n",
-    "    dataset = dataset.repeat() #保证读到数据集末端不会越界（重新开始下个epoch)\n",
-    "    dataset = dataset.batch(batch_size) #注意batch内需要个样本shape相同，所以需要保证已经做好预处理\n",
-    "    iterator = dataset.make_one_shot_iterator() #生成迭代器\n",
-    "    batch_features, batch_labels = iterator.get_next()\n",
-    "    return batch_features, batch_labels "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "####################################################################################"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def pretreat(inputs):\n",
-    "        \n",
-    "    crop_size = CROP_SIZE\n",
-    "    outputs = []\n",
-    "    for imggroup in inputs:\n",
-    "            \n",
-    "        group = []\n",
-    "        for image in imggroup:\n",
-    "                \n",
-    "            height = image.shape[0]\n",
-    "            width = image.shape[1]   \n",
-    "                        \n",
-    "            if(width>height):\n",
-    "                scale=float(crop_size)/float(height)\n",
-    "                img=np.array(cv2.resize(image,(int(width*scale+1),crop_size))).astype(np.float32)      \n",
-    "            else:                    \n",
-    "                scale=float(crop_size)/float(width)\n",
-    "                img=np.array(cv2.resize(image,(crop_size,int(height*scale+1)))).astype(np.float32)\n",
-    "                \n",
-    "            crop_y=int((img.shape[0]-crop_size)/2)\n",
-    "            crop_x=int((img.shape[1]-crop_size)/2)\n",
-    "            img=img[crop_y:crop_y+crop_size,crop_x:crop_x+crop_size,:]\n",
-    "\n",
-    "            #print img\n",
-    "            \n",
-    "            std = np.std(img, ddof=1)\n",
-    "            mean = np.mean(img)\n",
-    "            std = np.max([std, 1.0/np.sqrt(160*160*3)])\n",
-    "           \n",
-    "            img = (img-mean)/std\n",
-    "\n",
-    "            group.append(img)\n",
-    "            \n",
-    "        outputs.append(group)\n",
-    "    return np.array(outputs).astype(np.float32)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -475,7 +293,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1107 1107\n",
       "INFO:tensorflow:Restoring parameters from ./SC_DA_P3D_RES1010_30000-30000\n",
       "tensorflow/serving/predict\n",
       "INFO:tensorflow:No assets to save.\n",
@@ -485,29 +302,41 @@
     }
    ],
    "source": [
-    "#Cell for Testing singal\n",
+    "def pretreat(param):\n",
+    "    mean, variance = tf.nn.moments(param, axes=[0,1,2])\n",
+    "    std = tf.sqrt(variance) \n",
+    "    std = tf.maximum(std, tf.constant(1.0/np.sqrt(160*160*3), dtype=tf.float32))\n",
+    "    param = tf.subtract(param, mean)\n",
+    "    param = tf.divide(param, std)\n",
+    "    return param\n",
+    "    \n",
+    "\n",
+    "def get_inputs(param):\n",
+    "    \n",
+    "    my_input = tf.map_fn(elems=param, fn=tf.image.decode_jpeg, dtype=tf.uint8)\n",
+    "\n",
+    "    my_input = tf.reshape(my_input,[16, 160, 160, 3])\n",
+    "    my_input = tf.cast(my_input, dtype=tf.float32)\n",
+    "    \n",
+    "    my_input = tf.map_fn(elems=my_input, fn=pretreat, dtype=tf.float32)\n",
+    "    return my_input\n",
+    "\n",
     "MOVING_AVERAGE_DECAY=0.99\n",
     "tf.reset_default_graph()\n",
-    "#when testing ,make sure IS_TRAIN==False,or you will get bad result for testing.\n",
     "IS_TRAIN=False\n",
-    "BATCH_SIZE=1\n",
-    "final_acc=0\n",
-    "IS_DA=False\n",
     "\n",
-    "c=0\n",
     "with tf.Graph().as_default():\n",
     "    \n",
     "    global_step=tf.get_variable('global_step',[],initializer=tf.constant_initializer(0),trainable=False)\n",
-    "    input_placeholder=tf.placeholder(tf.float32,shape=(BATCH_SIZE,NUM_FRAMES_PER_CLIP,CROP_SIZE,CROP_SIZE,RGB_CHANNEL))\n",
-    "    label_placeholder=tf.placeholder(tf.int64,shape=(BATCH_SIZE))\n",
-    "    #when testing,make sure dropout=1.0(keep_prob)\n",
-    "    logit, xx=inference_p3d(input_placeholder,BATCH_SIZE)\n",
+    "    root_input_placeholder =tf.placeholder(tf.string,shape=(None,16))\n",
+    "    input_placeholder = tf.map_fn(elems=root_input_placeholder, fn=get_inputs, dtype=tf.float32)\n",
+    "    input_placeholder = tf.reshape(input_placeholder,[-1,16,160,160,3])\n",
+    "    logit=inference_p3d(input_placeholder)\n",
     "    variable_averages=tf.train.ExponentialMovingAverage(MOVING_AVERAGE_DECAY,num_updates=global_step)\n",
     "\n",
-    "    acc=compute_accuracy(logit,label_placeholder)\n",
     "    init=tf.global_variables_initializer()\n",
     "    variable_avg_restore=variable_averages.variables_to_restore()\n",
-    "    print len(variable_avg_restore), len(tf.global_variables())\n",
+    "    \n",
     "    saver=tf.train.Saver(variable_avg_restore)\n",
     "    \n",
     "    config = tf.ConfigProto()  \n",
@@ -517,31 +346,7 @@
     "    #restore your checkpoint file\n",
     "    saver.restore(sess,'./SC_DA_P3D_RES1010_30000-30000')\n",
     "\n",
-    "    save_model_to_serving(input_placeholder, logit, sess, saver, '1111', './3daction')\n",
-    "    '''\n",
-    "    ls = os.listdir('/home/sw/data/2018-11-01/DS-2PT7D20IW-DE20170902AACH828556927/Cameral1')\n",
-    "    for step in range(1):\n",
-    "        #image,label = sess.run(test_next_batch)\n",
-    "        dir_path = '/home/sw/Work/tf/yaochang/tests/'\n",
-    "        inputs = []\n",
-    "        for i in range(16):\n",
-    "            file_path = dir_path + '{:0>4}'.format(i) + '.jpg'\n",
-    "            img = Image.open(file_path)\n",
-    "            inputs.append(np.array(img))\n",
-    "\n",
-    "        inputs = np.array(inputs)\n",
-    "        image = pretreat(np.expand_dims(inputs, 0))\n",
-    "        print np.std(image[0][0], ddof=1), np.mean(image[0][0])\n",
-    "        label = np.array([0])\n",
-    "\n",
-    "        accuracy, pred, xx=sess.run([acc,logit, xx],feed_dict={input_placeholder:image,\n",
-    "                                    label_placeholder:label})\n",
-    "\n",
-    "        print '->', np.argmax(pred, 1), pred, np.sum(np.fabs(xx))\n",
-    "        final_acc+=accuracy\n",
-    "        c+=1\n",
-    "    print(final_acc/c)\n",
-    "    '''"
+    "    save_model_to_serving(root_input_placeholder, logit, sess, saver, '1111', './3daction')"
    ]
   },
   {
