--- a/make_tensorserving_yolomodel.ipynb
+++ b/make_tensorserving_yolomodel.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Yolo3 import YOLO\n",
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "from Yolo3 import YOLO"
    ]
   },
   {
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<tf.Tensor 'concat_11:0' shape=(?, 4) dtype=float32>, <tf.Tensor 'concat_12:0' shape=(?,) dtype=float32>, <tf.Tensor 'concat_13:0' shape=(?,) dtype=int32>] [<tf.Tensor 'input_1:0' shape=(?, ?, ?, 3) dtype=float32>, <tf.Tensor 'Placeholder_366:0' shape=(2,) dtype=float32>, 0]\n"
+      "[<tf.Tensor 'concat_11:0' shape=(?, 4) dtype=float32>, <tf.Tensor 'concat_12:0' shape=(?,) dtype=float32>, <tf.Tensor 'concat_13:0' shape=(?,) dtype=int32>] [<tf.Tensor 'input_1:0' shape=(?,) dtype=string>, <tf.Tensor 'Placeholder_366:0' shape=(2,) dtype=float32>]\n"
      ]
     }
    ],
