--- a/make_tensorserving_mobilenet.ipynb
+++ b/make_tensorserving_mobilenet.ipynb
@@ -58,9 +58,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def decode(param):\n",
+    "    return tf.image.decode_jpeg(param, channels=3, dct_method='INTEGER_ACCURATE')\n",
+    "\n",
     "def get_inputs(param):\n",
-    "    my_input = tf.map_fn(elems=param, fn=tf.image.decode_jpeg, dtype=tf.uint8)\n",
+    "    my_input = tf.map_fn(elems=param, fn=decode, dtype=tf.uint8)\n",
     "    my_input = K.reshape(my_input,[-1, 224,224,3])\n",
+    "    \n",
     "    my_input = K.cast(my_input, dtype=tf.float32)\n",
     "    my_input = tf.divide(my_input, tf.constant(127.5))\n",
     "    my_input = tf.subtract(my_input, tf.constant(1.0))\n",
@@ -78,24 +82,23 @@
      "text": [
       "INFO:tensorflow:No assets to save.\n",
       "INFO:tensorflow:No assets to write.\n",
-      "INFO:tensorflow:SavedModel written to: ./mobilenet/1111/saved_model.pb\n"
+      "INFO:tensorflow:SavedModel written to: ./mnet/1111/saved_model.pb\n"
      ]
     }
    ],
    "source": [
     "K.set_learning_phase(0)\n",
-    "my_input = keras.layers.Input(shape=[],dtype=tf.string)\n",
-    "my_input = keras.layers.Lambda(get_inputs, output_shape=(224,224,3))(my_input)\n",
+    "root_input = keras.layers.Input(shape=[],dtype=tf.string)\n",
+    "my_input = keras.layers.Lambda(get_inputs, output_shape=(224,224,3))(root_input)\n",
     "\n",
     "base_model = MobileNetV2(alpha=1.4, include_top=False, input_tensor=my_input, weights=None)\n",
     "\n",
     "\n",
-    "inputs = base_model.input\n",
     "x = base_model.output\n",
     "x = keras.layers.GlobalAveragePooling2D()(x)\n",
     "y = keras.layers.Dense(2, activation='softmax')(x)\n",
     "\n",
-    "model = Model(inputs = inputs, outputs = y)\n",
+    "model = Model(inputs = root_input, outputs = y)\n",
     "\n",
     "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "\n",
